deleted extra code and formatting

--- a/src/styles/_scaffolding.scss
+++ b/src/styles/_scaffolding.scss
@@ -7,9 +7,14 @@ html {
 }
 
 body {
-  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  width: $page-width;
   text-align: center;
-  max-width: $page-width;
+  background-color: black;
 }
 
 h1 {
