--- a/src/styles/_scaffolding.scss
+++ b/src/styles/_scaffolding.scss
@@ -1,9 +1,8 @@
-html {
-  font-size: $font-size;
-  font-family: $font-family;
-  background: $background-color;
-  color: $font-color;
-  line-height: 1.4;
+@font-face {
+  font-family: 'Marvin';
+  src: url(../fonts/marvin-reg.ttf);
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
@@ -12,19 +11,8 @@ body {
   align-items: center;
   margin: 0;
   padding: 0;
-  width: $page-width;
+  width: auto;
   text-align: center;
   background-color: black;
-}
-
-h1 {
-  margin: 0 0 2rem;
-}
-
-.image {
-  display: inline-block;
-  height: 100px;
-  width: 100px;
-  background-image: url('~assets/example.png');
-  background-size: cover;
+  font-family: 'Marvin';
 }
